--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -34,6 +34,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_bloc: ^8.1.4
+  bloc: ^8.1.3
+  equatable: ^2.0.5
+  form_validator: ^2.1.1
+  http: ^1.2.1
+  shared_preferences: ^2.5.3
+  freezed_annotation: ^3.0.0
+  json_annotation: ^4.9.0
+  go_router: ^14.8.1
+  dio: ^5.8.0+1
+  fpdart: ^1.1.1
 
 dev_dependencies:
   flutter_test:
@@ -45,6 +56,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  freezed: ^3.0.6
+  build_runner: ^2.4.15
+  json_serializable: ^6.9.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
